--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "ng-online-porfolio": {
+    "ng-online-portfolio": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/ng-online-porfolio",
+            "outputPath": "dist/ng-online-portfolio",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -62,18 +62,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ng-online-porfolio:build"
+            "browserTarget": "ng-online-portfolio:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "ng-online-porfolio:build:production"
+              "browserTarget": "ng-online-portfolio:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ng-online-porfolio:build"
+            "browserTarget": "ng-online-portfolio:build"
           }
         },
         "test": {
@@ -107,7 +107,7 @@
         }
       }
     },
-    "ng-online-porfolio-e2e": {
+    "ng-online-portfolio-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "prefix": "",
@@ -116,11 +116,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "ng-online-porfolio:serve"
+            "devServerTarget": "ng-online-portfolio:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "ng-online-porfolio:serve:production"
+              "devServerTarget": "ng-online-portfolio:serve:production"
             }
           }
         },
@@ -136,5 +136,5 @@
       }
     }
   },
-  "defaultProject": "ng-online-porfolio"
+  "defaultProject": "ng-online-portfolio"
 }
